--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "ejs": "^3.1.6",
+    "frost-walker": "^0.0.3",
     "html-minifier": "^4.0.0",
     "ws": "^8.2.3"
   }
