--- a/package.json
+++ b/package.json
@@ -3,29 +3,36 @@
   "version": "1.0.0",
   "description": "🚀 A static site generator.",
   "main": "index.js",
+  "files": [
+    "build"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "format": "prettier --write src/**/*.ts"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/DevSnowflake/frost.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "static",
+    "site",
+    "generator"
+  ],
+  "author": "Rhydderchc",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/DevSnowflake/frost/issues"
   },
   "homepage": "https://github.com/DevSnowflake/frost#readme",
   "devDependencies": {
-    "@types/ejs": "^3.1.0",
     "@types/html-minifier": "^4.0.1",
     "@types/node": "^16.11.1",
-    "@types/ws": "^8.2.0"
+    "@types/ws": "^8.2.0",
+    "prettier": "^2.4.1",
+    "typescript": "^4.4.4"
   },
   "dependencies": {
-    "ejs": "^3.1.6",
-    "frost-walker": "^0.0.3",
+    "frost-walker": "^0.0.4",
     "html-minifier": "^4.0.0",
     "ws": "^8.2.3"
   }
