--- a/package.json
+++ b/package.json
@@ -1,39 +1,40 @@
 {
-  "name": "frost",
-  "version": "1.0.0",
-  "description": "🚀 A static site generator.",
-  "main": "index.js",
-  "files": [
-    "build"
-  ],
-  "scripts": {
-    "format": "prettier --write src/**/*.ts"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/DevSnowflake/frost.git"
-  },
-  "keywords": [
-    "static",
-    "site",
-    "generator"
-  ],
-  "author": "Rhydderchc",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/DevSnowflake/frost/issues"
-  },
-  "homepage": "https://github.com/DevSnowflake/frost#readme",
-  "devDependencies": {
-    "@types/html-minifier": "^4.0.1",
-    "@types/node": "^16.11.1",
-    "@types/ws": "^8.2.0",
-    "prettier": "^2.4.1",
-    "typescript": "^4.4.4"
-  },
-  "dependencies": {
-    "frost-walker": "^0.0.4",
-    "html-minifier": "^4.0.0",
-    "ws": "^8.2.3"
-  }
+    "name": "frost",
+    "version": "1.0.0",
+    "description": "🚀 A static site generator.",
+    "main": "index.js",
+    "files": [
+        "build"
+    ],
+    "scripts": {
+        "format": "prettier --write src/**/*.ts"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/DevSnowflake/frost.git"
+    },
+    "keywords": [
+        "static",
+        "site",
+        "generator"
+    ],
+    "author": "Rhydderchc",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/DevSnowflake/frost/issues"
+    },
+    "homepage": "https://github.com/DevSnowflake/frost#readme",
+    "devDependencies": {
+        "@types/html-minifier": "^4.0.1",
+        "@types/node": "^16.11.1",
+        "@types/ws": "^8.2.0",
+        "prettier": "^2.4.1",
+        "typescript": "^4.4.4"
+    },
+    "dependencies": {
+        "frost-walker": "^0.0.4",
+        "html-minifier": "^4.0.0",
+        "picocolors": "^1.0.0",
+        "ws": "^8.2.3"
+    }
 }
