chore: fix license field on package json

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "generator"
     ],
     "author": "Rhydderchc",
-    "license": "ISC",
+    "license": "MIT",
     "bugs": {
         "url": "https://github.com/DevSnowflake/frost/issues"
     },
