--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "homepage": "https://github.com/DevSnowflake/frost#readme",
     "devDependencies": {
+        "@types/common-tags": "^1.8.1",
         "@types/html-minifier": "^4.0.1",
         "@types/marked": "^3.0.2",
         "@types/node": "^16.11.1",
@@ -33,6 +34,7 @@
         "typescript": "^4.4.4"
     },
     "dependencies": {
+        "common-tags": "^1.8.0",
         "html-minifier": "^4.0.0",
         "marked": "^3.0.7",
         "picocolors": "^1.0.0",
