--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
         "typescript": "^4.4.4"
     },
     "dependencies": {
+        "common-tags": "^1.8.0",
         "html-minifier": "^4.0.0",
         "marked": "^3.0.7",
         "picocolors": "^1.0.0",
+        "terser": "^5.9.0",
         "ws": "^8.2.3"
     }
 }
