--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "format": "prettier --write src/**/*.ts",
         "dev": "ts-node src/cli/index.ts --serve --port 3000",
         "build": "rimraf build && tsc",
-        "test": "node __test__/test.js ./check.js"
+        "test": "node __test__/test.js ./check.js",
+        "prepare": "husky install"
     },
     "repository": {
         "type": "git",
@@ -36,7 +37,8 @@
         "prettier": "^2.4.1",
         "rimraf": "^3.0.2",
         "ts-node": "^10.4.0",
-        "typescript": "^4.4.4"
+        "typescript": "^4.4.4",
+        "husky": "^7.0.0"
     },
     "dependencies": {
         "common-tags": "^1.8.0",
