--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
         "@types/marked": "^3.0.2",
         "@types/node": "^16.11.1",
         "@types/ws": "^8.2.0",
+        "husky": "^7.0.0",
         "prettier": "^2.4.1",
         "rimraf": "^3.0.2",
         "ts-node": "^10.4.0",
-        "typescript": "^4.4.4",
-        "husky": "^7.0.0"
+        "typescript": "^4.4.4"
     },
     "dependencies": {
         "common-tags": "^1.8.0",
