--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "module": "commonjs",
         "allowJs": true,
         "outDir": "./build" /* Redirect output structure to the directory. */,
-        "rootDir": "./src",
+        "rootDir": ".",
         "strict": true,
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
