--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     ],
     "scripts": {
         "format": "prettier --write src/**/*.ts",
-        "dev": "cd test && ts-node ../src/cli/index.ts --serve --port 3000",
+        "dev": "ts-node src/cli/index.ts --serve --port 3000",
         "build": "rimraf build && tsc",
         "test": "node __test__/test.js ./check.js",
         "prepare": "husky install"
