--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,16 @@
 {
     "compilerOptions": {
-        "target": "es5",
-        "module": "commonjs",
+        "target": "es2017",
+        "module": "esnext",
         "allowJs": true,
         "outDir": "./build" /* Redirect output structure to the directory. */,
         "rootDir": "./src",
         "strict": true,
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
-        "downlevelIteration": true
+        "downlevelIteration": true,
+        "moduleResolution": "node",
     },
 
-    "exclude": ["__test__"]
+    "exclude": ["__test__", "__docs__"]
 }
