--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
         "test": "node --experimental-specifier-resolution=node __test__/test.js ./check.js",
         "prepare": "husky install",
         "package": "pkg .",
-        "docs:serve":"codedoc serve",
-        "docs:build":"codedoc build"
+        "docs:serve":"cd __docs__ && npx codedoc serve",
+        "docs:build":"cd __docs__ && npx codedoc build"
     },
     "repository": {
         "type": "git",
